# Career_Intelligence_Agent

./: .env.example  .gitignore  AGENT.md  DECISIONS.md  LEARNINGS.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  sprint2a-report.md  workday_smoke_test_report.md
.github/workflows/: ci.yml
api/: dependencies.py  extractor.py  main.py  models.py  scheduler.py
api/routes/: crawl.py  jobs.py  search.py
crawlers/: SUPPORT_MATRIX.md  __init__.py  ashby.py  ats_detector.py  base.py  dispatcher.py  greenhouse.py  lever.py  playwright_pool.py  registry.py  service.py  smartrecruiters.py  utils.py  workable.py  workday.py
crawlers/custom/: __init__.py  amazon_careers.py  apple_careers.py  cisco_careers.py  google_careers.py  ibm_careers.py  intel_careers.py  mathcompany_careers.py  meta_careers.py  nvidia_careers.py  oracle_careers.py  qualcomm_careers.py  swiggy_careers.py  tredence_careers.py
database/: crud.py  import.py  import_jobs.py  schema.py
embeddings/: embedder.py  matcher.py  vector_store.py
faiss_index/: id_map.npy  index.faiss
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CrawlForm.tsx  JobTable.tsx  Layout.tsx  SearchForm.tsx
frontend/src/types/: index.ts
pipeline/: rank.py  search_service.py
scripts/: setup.ps1  smoke_test_workday.py  verify_crawlers.py
tests/: conftest.py  test_api_crawl.py  test_api_crawl_all.py  test_api_jobs.py  test_api_search.py  test_ashby.py  test_ats_detector.py  test_base_crawler.py  test_crud.py  test_custom_scrapers.py  test_dispatcher.py  test_embedder.py  test_extractor.py  test_greenhouse.py  test_lever.py  test_playwright_pool.py  test_rank.py  test_registry.py  test_scheduler.py  test_search_service.py  test_service.py  test_smartrecruiters.py  test_utils.py  test_vector_store.py  test_workable.py  test_workday.py
