[project]
name = "career_intelligence_agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crawlers*", "database*", "embeddings*", "pipeline*", "api*"]
exclude = ["tests*", "data*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",
    "httpx>=0.27.0",
]
