[project]
name = "career_intelligence_agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crawlers*", "database*", "embeddings*", "pipeline*", "api*"]
exclude = ["tests*", "data*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",
    "httpx>=0.27.0",
    "ruff>=0.15.0",
    "mypy>=2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "ARG", "C4", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]
"api/routes/*" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
disallow_untyped_defs = false
check_untyped_defs = false
